Fix Fake Damage
Took 2 minutes